<resources>
    <string name="app_name">lab2-database-mobile-app</string>
    <string name="delete_all_data">Delete all data</string>

    //insert activity
    <string name="manufacturer_label">Manufacturer</string>
    <string name="model_label">Model</string>
    <string name="android_version_label">Android</string>
    <string name="website_label">Website</string>

    <string name="button_website">Website</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_update">Update</string>

    <string name="website_error">Inappropriate website address </string>

    //errors
    <string name="empty_input_error">Pole nie może być puste</string>

</resources>